# star_burger

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
docker/: docker-compose.yml
docker/nginx/: starburger.conf
foodcartapp/: admin.py  models.py  serializers.py  views.py
foodcartapp/migrations/: 0038_order_orderitem_order_foodcartapp_phonenu_5f4ceb_idx.py  0039_alter_order_id.py  0040_orderitem_price.py  0041_auto_20230821_1649.py  0042_remove_order_foodcartapp_phonenu_5f4ceb_idx_and_more.py  0043_order_comment.py  0044_remove_order_foodcartapp_phonenu_4af990_idx_and_more.py  0045_alter_order_called_at_alter_order_delivered_at_and_more.py  0046_order_payment_type.py  0047_remove_order_foodcartapp_phonenu_d60526_idx_and_more.py  0048_order_restaurant_alter_orderitem_product.py  0049_order_near_restaurant.py  0050_location.py  0051_delete_location.py  0052_alter_orderitem_product.py  0053_alter_order_id.py  0054_alter_order_comment.py  0055_remove_order_near_restaurant.py  0056_alter_orderitem_quantity.py
location/: models.py
location/migrations/: 0001_initial.py  0002_alter_location_latitude_alter_location_longitude.py
restaurateur/: services.py  views.py
restaurateur/templates/: order_items.html
star_burger/: settings.py
