[tool.poetry]
name = "star-burger"
version = "0.1.0"
description = ""
authors = ["Sangdak <82779027+Sangdak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "star_burger"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
django-debug-toolbar = "^4.1.0"
pillow = "^10.0.0"
environs = "^9.5.0"
dj-database-url = "^2.0.0"
django-phonenumber-field = "^7.1.0"
phonenumbers = "^8.13.18"
djangorestframework = "^3.14.0"
markdown = "^3.4.4"
django-filter = "^23.2"
geopy = "2.3.0"
requests = "2.28"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
